script sign up email verification

--- a/public/views/edit_user_info.html
+++ b/public/views/edit_user_info.html
@@ -36,6 +36,7 @@
                         <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='reset_pwd.html';">Reset Password</button>
                         <button type="button" class="btn btn-outline-primary text-uppercase" onclick="saveProfile()">Save</button>
                         <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='dashboard.html';">Cancel</button>
+                        <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='#';">Delete</button>
                     </div>
                 </div>
             </div>
