email.js .html: sign in email verification

--- a/public/views/email_verification.html
+++ b/public/views/email_verification.html
@@ -33,5 +33,7 @@
             </div>
         </div>
     </div>
+    <!-- Custom JavaScript -->
+    <script data-main="./server" src="../script/auth.js"></script>
 </body>
 </html>
