--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../style.css">
     <!-- Nunito Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
-    <script type="module" src="../script/dashboard.js"></script>
+    <script src="../script/dashboard.js"></script>
     <!-- Firebase JS SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth-compat.js"></script>
