dashboard ejs data

--- a/public/views/dashboard.ejs
+++ b/public/views/dashboard.ejs
@@ -20,7 +20,7 @@
     <title>Profile</title>
 </head>
 <body class="bg-light">
-    <form action="/userInfo">
+    <form action="/">
         <div class="container-fluid">
             <div class="col-lg-10 col-md-10 offset-lg-1 offset-md-1 bg-white shadow my-5 border border-primary">   
                 <div class="p-lg-5 p-md-5 px-3 py-4 text-dark">
