--- a/public/views/dashboard.ejs
+++ b/public/views/dashboard.ejs
@@ -49,7 +49,7 @@
                     </div>
                     <button type="submit" id="btnUserInfo" hidden></button>
                     <div class="col-lg-12 col-md-12 text-left">
-                        <p>All User:<%=allUsers.length%>  Today: Avg num of last 7 days:</p>
+                        <p>All User: Today: Avg num of last 7 days:</p>
                     </div>
                     <div class="grid-container">
                         <div class="grid-item">NO</div>
