--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -66,6 +66,6 @@
         </div>
     </form>
     <script data-main="../server" src="../script/script.js"></script>
-    <script type="module" src="../script/dashboard.js"></script>
+    <script src="../script/dashboard.js"></script>
 </body>
 </html>
