dashboard grid css

--- a/public/style.css
+++ b/public/style.css
@@ -6,11 +6,12 @@
     margin-top: 10px;
   }
   .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
     font-size: 15px;
-    text-align: center;
+    text-decoration-style: solid;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 /* Global */
   * {
