--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,20 @@
 .grid-container {
-    display: grid;
-    grid-template-columns: 5% 20% 20% 20% 15% 20%;
-    padding: 2px;
-    margin-top: 10px;
-  }
-  .grid-item {
-    border: 1px solid rgba(40, 125, 250, 0.8);
-    padding: 20px;
-    font-size: 15px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+  display: grid;
+  grid-template-columns: 5% 20% 20% 20% 15% 20%;
+  border: 1px solid rgba(40, 125, 250, 0.8);
+  padding: 2px;
+  margin-top: 10px;
+}
+.grid-item {
+  border: 1px solid rgba(40, 125, 250, 0.8);
+  padding: 10px;
+  font-size: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.font-bold {
+  font-weight: bold;
+}
 /* Global */
   * {
     box-sizing: border-box;
