--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -52,12 +52,12 @@
                         <p>All User:<span id="allUserCnt"></span> Today:<span id="todayCnt"></span> Avg num of last 7 days:<span id="avgCnt"></span></p>
                     </div>
                     <div class="grid-container" id="dataList">
-                        <div class="grid-item">NO</div>
-                        <div class="grid-item">USER NAME</div>
-                        <div class="grid-item">Email</div>
-                        <div class="grid-item">Sign up date</div>
-                        <div class="grid-item">Number of logins</div>
-                        <div class="grid-item">Last user session</div>
+                        <div class="grid-item font-bold">NO</div>
+                        <div class="grid-item font-bold">USER NAME</div>
+                        <div class="grid-item font-bold">Email</div>
+                        <div class="grid-item font-bold">Sign up date</div>
+                        <div class="grid-item font-bold">Number of logins</div>
+                        <div class="grid-item font-bold">Last user session</div>
                         <!-- Users info from DB -->
                     </div>
                 </div>
