--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="col-lg-12 col-md-12 text-left">
                         <!-- User statistics info -->
-                        <p>All User:<span id="allUserCnt"></span> Today:<span id="todayCnt"></span> Avg num of last 7 days:<span id="avgCnt"></span></p>
+                        <p>All Users: <span id="allUserCnt" class="color-main"></span> | Today: <span id="todayCnt" class="color-main"></span> | Average visitors of last 7 days: <span id="avgCnt" class="color-main"></span></p>
                     </div>
                     <div class="grid-container" id="dataList">
                         <div class="grid-item font-bold">ID</div>
