--- a/public/views/email_verification.html
+++ b/public/views/email_verification.html
@@ -27,7 +27,8 @@
                     <h2 class="h2 text-center text-dark mb-3">Email Verification</h2>
                     <div id="firebaseui-auth-container"></div>
                     <p>Please check your email to verify your email address.</p>
-                    <a id="resendEmailA" href="#">Resend Email</a>
+                    <a id="resendEmailA" href="#"><p>Resend Email</p></a>
+                    <a href="../index.html"><small>Back to Login Page</small></a>
                 </div>
             </div>
         </div>
