--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -64,6 +64,7 @@
             </div>
         </div>
     </form>
+    <!-- Custom JavaScript -->
     <script data-main="../server" src="../script/script.js"></script>
     <script src="../script/dashboard.js"></script>
 </body>
