--- a/public/views/edit_user_info.html
+++ b/public/views/edit_user_info.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../style.css">
-    <!-- Fontawesome CSS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <!-- Nunito Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
-    <title>Edit</title>
+    <!-- Firebase JS SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth-compat.js"></script>
+    <script src="../script/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"/>
 </head>
 <body class="bg-light">
     <div class="container-fluid">
@@ -22,15 +25,15 @@
                     <h2 class="h2 text-center text-dark mb-3">Edit Profile</h2>
                     <div class="form-group">
                         <label for="userFullName">Name</label>
-                        <input type="text" class="form-control" id="userFullName" onblur="checkUserFullName()" placeholder="Name">
+                        <input type="text" class="form-control" id="userFullName" onkeyup="checkUserFullName()">
                     </div>
                     <div class="form-group">
                         <label for="userEmail">Email address</label>
-                        <input type="email" class="form-control" id="userEmail" onblur="checkUserEmail()" placeholder="mail@mail.com" readonly>
+                        <input type="email" class="form-control" id="userEmail" onkeyup="checkUserEmail()" readonly>
                     </div>
                     <div class="form-group">
                         <label for="userPassword">Password</label>
-                        <input type="password" class="form-control" id="userPassword" onblur="checkUserPassword()" placeholder="**********" readonly>
+                        <input type="password" class="form-control" id="userPassword" onkeyup="checkUserPassword()" placeholder="**********" readonly>
                     </div>
                     <div class="col-lg-12 col-md-12 text-right">
                         <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='reset_pwd.html';">Reset Password</button>
@@ -42,34 +45,8 @@
             </div>
         </div>
     </div>
-    <!-- Optional JavaScript -->
-
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-app.js"></script>
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-    https://firebase.google.com/docs/web/setup#config-web-app -->
-    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-auth.js"></script>
-    <!-- Firebase UI -->
-    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"/>
-
-    <script>
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-    apiKey: "AIzaSyCBSfZbINX0RkfDLZ_dUWeAE383iXLgowg",
-    authDomain: "simple-dashboard-48420.firebaseapp.com",
-    projectId: "simple-dashboard-48420",
-    storageBucket: "simple-dashboard-48420.appspot.com",
-    messagingSenderId: "132374569431",
-    appId: "1:132374569431:web:df01c30c4f0f25ed3cab92",
-    measurementId: "G-Y72JJ0Q98H"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    </script>
-
     <!-- Custom JavaScript -->
-    <script src="../app.js"></script>
-    <script src="../script.js"></script>
+    <script data-main="../server" src="../script/script.js"></script>
+    <script src="../script/dashboard.js"></script>
 </body>
 </html>
