--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -43,7 +43,7 @@
                             </div>
                         </div>                 
                         <div class="col-lg-12 col-md-12 mb-3 text-center">
-                            <button type="button" class="btn btn-outline-primary text-uppercase" onclick="location.href='edit_user_info.html';">Edit Profile</button>
+                            <button type="button" class="btn btn-outline-primary text-uppercase" onclick="editInfo()">Edit Profile</button>
                             <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="signOut()">Sign Out</button>
                         </div>
                     </div>
