--- a/public/views/edit_user_info.html
+++ b/public/views/edit_user_info.html
@@ -33,13 +33,13 @@
                     </div>
                     <div class="form-group">
                         <label for="userPassword">Password</label>
-                        <input type="password" class="form-control" id="userPassword" onkeyup="checkUserPassword()" placeholder="**********" readonly>
+                        <input type="password" class="form-control" id="userPassword" onkeyup="checkUserPassword()" readonly>
                     </div>
                     <div class="col-lg-12 col-md-12 text-right">
                         <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='reset_pwd.html';">Reset Password</button>
                         <button type="button" class="btn btn-outline-primary text-uppercase" onclick="saveProfile()">Save</button>
                         <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='dashboard.html';">Cancel</button>
-                        <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='#';">Delete</button>
+                        <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="deleteUser()">Delete</button>
                     </div>
                 </div>
             </div>
