--- a/public/views/edit_user_info.html
+++ b/public/views/edit_user_info.html
@@ -25,15 +25,15 @@
                     <h2 class="h2 text-center text-dark mb-3">Edit Profile</h2>
                     <div class="form-group">
                         <label for="userFullName">Name</label>
-                        <input type="text" class="form-control" id="userFullName" onkeyup="checkUserFullName()">
+                        <input type="text" class="form-control" id="userFullName" onkeyup="checkUserFullName()" value="">
                     </div>
                     <div class="form-group">
                         <label for="userEmail">Email address</label>
-                        <input type="email" class="form-control" id="userEmail" onkeyup="checkUserEmail()" readonly>
+                        <input type="email" class="form-control" id="userEmail" onkeyup="checkUserEmail()" value="" readonly>
                     </div>
                     <div class="form-group">
                         <label for="userPassword">Password</label>
-                        <input type="password" class="form-control" id="userPassword" onkeyup="checkUserPassword()" readonly>
+                        <input type="password" class="form-control" id="userPassword" onkeyup="checkUserPassword()" placeholder="**********" readonly>
                     </div>
                     <div class="col-lg-12 col-md-12 text-right">
                         <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='reset_pwd.html';">Reset Password</button>
