--- a/public/views/edit_user_info.html
+++ b/public/views/edit_user_info.html
@@ -26,10 +26,11 @@
                     <div class="form-group">
                         <label for="userFullName">Name</label>
                         <input type="text" class="form-control" id="userFullName" onkeyup="checkUserFullName()" value="">
+                        <small id="userFullNameError" class="form-text text-danger" style="display: none;">This Field must be filled.</small>
                     </div>
                     <div class="form-group">
                         <label for="userEmail">Email address</label>
-                        <input type="email" class="form-control" id="userEmail" onkeyup="checkUserEmail()" value="" readonly>
+                        <input type="email" class="form-control" id="userEmail" value="" readonly>
                     </div>
                     <div class="form-group">
                         <label for="userPassword">Password</label>
