--- a/public/views/editInfo.html
+++ b/public/views/editInfo.html
@@ -37,7 +37,7 @@
                         <input type="password" class="form-control" id="userPassword" onkeyup="checkUserPassword()" placeholder="**********" readonly>
                     </div>
                     <div class="col-lg-12 col-md-12 text-right">
-                        <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='reset_pwd.html';">Reset Password</button>
+                        <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='resetPwd.html';">Reset Password</button>
                         <button type="button" class="btn btn-outline-primary text-uppercase" onclick="saveProfile()">Save</button>
                         <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='dashboard.html';">Cancel</button>
                         <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="deleteUser()">Delete</button>
@@ -48,5 +48,6 @@
     </div>
     <!-- Custom JavaScript -->
     <script data-main="../server" src="../script/script.js"></script>
+    <script src="../script/updateInfo.js"></script>
 </body>
 </html>
