--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -47,7 +47,7 @@
                         </div>
                         <button type="button" class="btn btn-outline-primary text-uppercase mb-3" onclick="signUp()">Sign Up</button>
                         <!-- <input type="submit" value="Sign Up" class="btn btn-outline-primary text-uppercase mb-3"> -->
-                        <p>Already a member? Sign in: <a href="../index.html"><strong class="text-primary text-uppercase showSignInForm">Sign In</strong></a></p>
+                        <p>Already a member? Sign in: <a href="/"><strong class="text-primary text-uppercase showSignInForm">Sign In</strong></a></p>
                     </div>
                 </div>
             </div>
