--- a/public/views/email_verification.html
+++ b/public/views/email_verification.html
@@ -28,7 +28,7 @@
                     <div id="firebaseui-auth-container"></div>
                     <p>Please check your email to verify your email address.</p>
                     <a id="resendEmailA" href="#"><p>Resend Email</p></a>
-                    <a href="../index.html"><small>Back to Login Page</small></a>
+                    <a href="/"><small>Back to Login Page</small></a>
                 </div>
             </div>
         </div>
