--- a/public/views/resetPwd.html
+++ b/public/views/resetPwd.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-lg-12 col-md-12 text-right">
                         <button type="button" class="btn btn-outline-primary text-uppercase" onclick="resetPassword()">Save</button>
-                        <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='dashboard.html';">Cancel</button>
+                        <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='/dashboard';">Cancel</button>
                     </div>
                 </div>
             </div>
