--- a/public/views/editInfo.html
+++ b/public/views/editInfo.html
@@ -37,9 +37,9 @@
                         <input type="password" class="form-control" id="userPassword" onkeyup="checkUserPassword()" placeholder="**********" readonly>
                     </div>
                     <div class="col-lg-12 col-md-12 text-right">
-                        <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='resetPwd.html';">Reset Password</button>
+                        <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='/resetPwd';">Reset Password</button>
                         <button type="button" class="btn btn-outline-primary text-uppercase" onclick="saveProfile()">Save</button>
-                        <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='dashboard.html';">Cancel</button>
+                        <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="location.href='/dashboard';">Cancel</button>
                         <button type="button" class="btn btn-outline-secondary text-uppercase" onclick="deleteUser()">Delete</button>
                     </div>
                 </div>
